--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "keywords": [
     "aurelia",
     "materialize",
-    "css"
+    "css",
+    "plugin"
   ],
   "homepage": "https://github.com/manuel-guilbault/aurelia-materialize",
   "bugs": {
@@ -18,26 +19,34 @@
     "type": "git",
     "url": "https://github.com/manuel-guilbault/aurelia-materialize"
   },
+  "jspm": {
+    "main": "index",
+    "format": "register",
+    "directories": {
+      "lib": "dist/system"
+    },
+    "dependencies": {
+      "aurelia-binding": "github:aurelia/binding@^0.6.1",
+      "aurelia-dependency-injection": "github:aurelia/dependency-injection@^0.7.1",
+      "aurelia-templating": "github:aurelia/templating@^0.11.2",
+      "css": "github:systemjs/plugin-css@^0.1.9"
+    }
+  },
   "devDependencies": {
-    "aurelia-tools": "^0.1.3",
-    "browser-sync": "^1.8.1",
+    "aurelia-tools": "^0.1.0",
     "conventional-changelog": "0.0.11",
     "del": "^1.1.0",
     "gulp": "^3.8.10",
     "gulp-babel": "^5.1.0",
     "gulp-bump": "^0.1.11",
-    "gulp-changed": "^1.1.0",
     "gulp-jshint": "^1.9.0",
-    "gulp-plumber": "^0.6.6",
-    "gulp-protractor": "^0.0.12",
-    "gulp-sourcemaps": "^1.3.0",
     "gulp-yuidoc": "^0.1.2",
     "jasmine-core": "^2.1.3",
     "jshint-stylish": "^1.0.0",
     "karma": "^0.12.28",
-    "karma-babel-preprocessor": "^5.1.0",
+    "karma-babel-preprocessor": "^5.0.1",
     "karma-chrome-launcher": "^0.1.7",
-    "karma-jasmine": "^0.3.5",
+    "karma-jasmine": "^0.3.2",
     "karma-jspm": "^1.1.4",
     "object.assign": "^1.0.3",
     "require-dir": "^0.1.0",
@@ -45,17 +54,29 @@
     "vinyl-paths": "^1.0.0",
     "yargs": "^2.1.1"
   },
-  "jspm": {
-    "dependencies": {
-      "aurelia-binding": "github:aurelia/binding@^0.6.1",
-      "aurelia-dependency-injection": "github:aurelia/dependency-injection@^0.7.1",
-      "aurelia-templating": "github:aurelia/templating@^0.11.2",
-      "css": "github:systemjs/plugin-css@^0.1.9"
-    },
-    "devDependencies": {
-      "babel": "npm:babel-core@^5.1.13",
-      "babel-runtime": "npm:babel-runtime@^5.1.13",
-      "core-js": "npm:core-js@^0.9.4"
+  "aurelia": {
+    "usedBy": [],
+    "documentation": {
+      "links": [
+        {
+          "rel": "license",
+          "mediaType": "text/plain",
+          "title": "The MIT License (MIT)",
+          "href": "LICENSE"
+        },
+        {
+          "rel": "describedby",
+          "mediaType": "application/aurelia-doc+json",
+          "title": "API",
+          "href": "doc/api.json"
+        },
+        {
+          "rel": "version-history",
+          "mediaType": "text/markdown",
+          "title": "Change Log",
+          "href": "doc/CHANGELOG.md"
+        }
+      ]
     }
   }
 }
