--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
       "aurelia-templating": "github:aurelia/templating@^0.11.2",
       "css": "github:systemjs/plugin-css@^0.1.9",
       "jquery": "github:components/jquery@^2.1.4",
-      "materialize": "github:dogfalo/materialize@^0.96.1"
+      "materialize": "github:Dogfalo/materialize@^0.96.1"
     },
     "devDependencies": {
       "traceur": "github:jmcriffey/bower-traceur@0.0.88",
