--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
       "aurelia-binding": "github:aurelia/binding@^0.6.1",
       "aurelia-dependency-injection": "github:aurelia/dependency-injection@^0.7.1",
+      "aurelia-event-aggregator": "github:aurelia/event-aggregator@^0.5.0",
       "aurelia-templating": "github:aurelia/templating@^0.11.2",
       "css": "github:systemjs/plugin-css@^0.1.9",
       "jquery": "github:components/jquery@^2.1.4",
