--- a/package.json
+++ b/package.json
@@ -37,6 +37,22 @@
     "devDependencies": {
       "traceur": "github:jmcriffey/bower-traceur@0.0.88",
       "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.88"
+    },
+    "overrides": {
+      "github:Dogfalo/materialize@0.97.0": {
+        "main": "dist/js/materialize",
+        "shim": {
+          "dist/js/materialize": {
+            "deps": [
+              "jquery"
+            ],
+            "exports": "$"
+          }
+        },
+        "dependencies": {
+          "jquery": "github:components/jquery"
+        }
+      }
     }
   },
   "devDependencies": {
